--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
 	"Lua.workspace.ignoreDir": [
 			".vscode",
 			".github",
+			".script",
 			"locale"
 	],
 	"Lua.runtime.builtin": {
@@ -65,5 +66,16 @@
 	"restructuredtext.confPath": "${workspaceFolder}\\predocs",
 	"restructuredtext.builtDocumentationPath" : "${workspaceFolder}/docs/_build/html",
 	"restructuredtext.updateOnTextChanged"    : "false",
-	"restructuredtext.updateDelay"            : 1000,
+	"restructuredtext.updateDelay": 1000,
+	"Lua.diagnostics.disable": [
+		"lowercase-global",
+		"undefined-doc-name",
+		"undefined-doc-class"
+	],
+	"triggerTaskOnSave.tasks": {
+		"Luacheck": ["*.lua"]
+	},
+	"Lua.runtime.special": {
+		"__object_name": "type"
+	},
 }
